[project]
name = "Homework1"
version = "0.1.0"
description = ""
authors = [
    {name = "Willow Ahrens",email = "willow@csail.mit.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]
